dynamix/force-app/main/default/objects/Lead/fields/communicat_o__Facebook_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Facebook_Id__c</fullName>
    <label>Facebook Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>