dynamix/force-app/main/default/objects/Lead/fields/Country_Code1__c.field-meta.xml
<CustomField>
    <fullName>Country_Code1__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>