dynamix/force-app/main/default/objects/Lead/fields/Date_and_Time_of_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Created_Date__c</fullName>
    <label>Date and Time of Created Date</label>
    <type>DateTime</type>
</CustomField>