dynamix/force-app/main/default/objects/Lead/fields/Lead_Sub__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook Paid</fullName>
            </value>
            <value>
                <fullName>Facebook Organic</fullName>
            </value>
            <value>
                <fullName>Instagram Paid</fullName>
            </value>
            <value>
                <fullName>Instagram Organic</fullName>
            </value>
            <value>
                <fullName>Hoarding Ad A</fullName>
            </value>
            <value>
                <fullName>Hoarding Ad B</fullName>
            </value>
            <value>
                <fullName>TOI</fullName>
            </value>
            <value>
                <fullName>The Hindu</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Not Answering</fullName>
            </value>
            <value>
                <fullName>Casual Enquiry</fullName>
            </value>
            <value>
                <fullName>Fake Enquiry</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Early Possession</fullName>
            </value>
            <value>
                <fullName>Test Lead</fullName>
            </value>
            <value>
                <fullName>Low Budget</fullName>
            </value>
            <value>
                <fullName>Lower Carpet Area</fullName>
            </value>
            <value>
                <fullName>Number Busy</fullName>
            </value>
            <value>
                <fullName>Location Issue</fullName>
            </value>
            <value>
                <fullName>Disconnected While Ringing</fullName>
            </value>
            <value>
                <fullName>Purchased Elsewhere</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Not Connected Exhausted</fullName>
            </value>
            <value>
                <fullName>Site Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Drop The Plan</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>