dynamix/force-app/main/default/objects/Lead/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Housing.com</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Magic Bricks</fullName>
            </value>
            <value>
                <fullName>Common Floor</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>PaidAds</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Times_of_India</fullName>
            </value>
            <value>
                <fullName>Magic_Bricks</fullName>
            </value>
            <value>
                <fullName>99_Acres</fullName>
            </value>
            <value>
                <fullName>Bus_Shelter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>