dynamix/force-app/main/default/objects/Lead/fields/UTM_Parameters__c.field-meta.xml
<CustomField>
    <fullName>UTM_Parameters__c</fullName>
    <label>UTM Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>